crates/php-parser/tests/snapshots/integration__stmt_class_propertytypes.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "A",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Property": {
                  "name": "a",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "string"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 28,
                          "end": 34
                        }
                      }
                    },
                    "span": {
                      "start": 28,
                      "end": 34
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 21,
                "end": 37
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "b",
                  "visibility": "Protected",
                  "set_visibility": null,
                  "is_static": true,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "D"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 60,
                          "end": 62
                        }
                      }
                    },
                    "span": {
                      "start": 60,
                      "end": 62
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 43,
                "end": 64
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "c",
                  "visibility": "Private",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Nullable": {
                        "kind": {
                          "Named": {
                            "parts": [
                              "float"
                            ],
                            "kind": "Unqualified",
                            "span": {
                              "start": 79,
                              "end": 84
                            }
                          }
                        },
                        "span": {
                          "start": 79,
                          "end": 84
                        }
                      }
                    },
                    "span": {
                      "start": 78,
                      "end": 84
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 70,
                "end": 87
              }
            },
            {
              "kind": {
                "Property": {
                  "name": "d",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": true,
                  "is_readonly": true,
                  "type_hint": {
                    "kind": {
                      "Nullable": {
                        "kind": {
                          "Named": {
                            "parts": [
                              "int"
                            ],
                            "kind": "Unqualified",
                            "span": {
                              "start": 117,
                              "end": 120
                            }
                          }
                        },
                        "span": {
                          "start": 117,
                          "end": 120
                        }
                      }
                    },
                    "span": {
                      "start": 116,
                      "end": 120
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 93,
                "end": 123
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 126
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 126
  }
}
